# ChangeLog for dev-ml/bin-prot
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ml/bin-prot/ChangeLog,v 1.14 2012/03/27 21:29:02 aballier Exp $

  27 Mar 2012; Alexis Ballier <aballier@gentoo.org> bin-prot-2.0.3.ebuild:
  convert to oasis.eclass

  26 Feb 2012; Alexis Ballier <aballier@gentoo.org> bin-prot-2.0.3.ebuild:
  dont assign EAPI twice, by Ulrich Müller in bug #405895

  23 Feb 2012; Alexis Ballier <aballier@gentoo.org> -bin-prot-1.3.1.ebuild:
  remove old

*bin-prot-2.0.3 (06 Oct 2011)

  06 Oct 2011; Alexis Ballier <aballier@gentoo.org> +bin-prot-2.0.3.ebuild:
  version bump

  06 Jul 2011; Alexis Ballier <aballier@gentoo.org> -bin-prot-1.2.24.ebuild,
  -bin-prot-1.3.0.ebuild:
  remove old

*bin-prot-1.3.1 (25 Jun 2011)

  25 Jun 2011; Alexis Ballier <aballier@gentoo.org> +bin-prot-1.3.1.ebuild:
  version bump, by Vladimir Ivanov, bug #361165

*bin-prot-1.3.0 (22 Feb 2011)

  22 Feb 2011; Alexis Ballier <aballier@gentoo.org> +bin-prot-1.3.0.ebuild:
  version bump, by Vladimir Ivanov <v.ivanov@ymail.com>, bug #355747, with
  small modifications by me

  24 Dec 2010; Alexis Ballier <aballier@gentoo.org> -bin-prot-1.2.23.ebuild:
  remove old

*bin-prot-1.2.24 (16 Dec 2010)

  16 Dec 2010; Alexis Ballier <aballier@gentoo.org> +bin-prot-1.2.24.ebuild:
  version bump

  09 Apr 2010; Alexis Ballier <aballier@gentoo.org> -bin-prot-1.2.20.ebuild,
  -bin-prot-1.2.21.ebuild:
  remove old

*bin-prot-1.2.23 (09 Apr 2010)

  09 Apr 2010; Alexis Ballier <aballier@gentoo.org> +bin-prot-1.2.23.ebuild:
  version bump

*bin-prot-1.2.21 (03 Jan 2010)

  03 Jan 2010; Alexis Ballier <aballier@gentoo.org> +bin-prot-1.2.21.ebuild:
  version bump

*bin-prot-1.2.20 (26 Sep 2009)

  26 Sep 2009; Alexis Ballier <aballier@gentoo.org> -bin-prot-1.2.18.ebuild,
  +bin-prot-1.2.20.ebuild:
  Version bump

*bin-prot-1.2.18 (19 Sep 2009)

  19 Sep 2009; Alexis Ballier <aballier@gentoo.org> +bin-prot-1.2.18.ebuild,