@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST bin-prot-2.0.3.tar.gz 109427 RMD160 fe02221b20f2bb176a2a5e6f293c906470f945ce SHA1 5744736b5eb9367633c5fc124d531f6d9d66ee5e SHA256 e30a7f25ead4012f7719201b37cebd1d0ff1a839db5b84c72ffa1f17531fecf5
+DIST bin_prot-108.00.01.tar.gz 111721 RMD160 0ffc748430c4f96271a55560e3e4865c6a87c2d0 SHA1 92d495da10bc57e621e96d12187d70e47f2b88a5 SHA256 fff4872f820e51188310f443274ed696096a94b0f8ce291d074038e19fc7574e
+EBUILD bin-prot-108.00.01.ebuild 923 RMD160 479b50e5256db2d61f2ea93d7d2722d86d817d36 SHA1 207721f19e9b2acbdeda08b0fe15a0b5f156d728 SHA256 68305227df2496548cd4a413d829f45444147b42383887f33b54d9d8de914e20
 EBUILD bin-prot-2.0.3.ebuild 858 RMD160 737b180844cf7eeec8f7e61d43311263c8bffdf8 SHA1 61d32945547e5553d810a27d6986b6a319e8fa96 SHA256 64658ca4ef58c0c022c5f8f478a55651e6ec990becb71cac6364d8b9ba4ff85e
-MISC ChangeLog 2090 RMD160 9e2881210215e5f3e12ec2e628c4677817a95d66 SHA1 369ee2ae56aa8329776ba7b813ca46fb6b3c3ab2 SHA256 bc518b0a398b2fdf7288833e5854f1ca01ba87bbe9cdc5da2a81be099bf033f8
+MISC ChangeLog 2221 RMD160 7b693650647be343733628a91d551c87f3028af1 SHA1 053f2c777b919a1f215254fa3531cbd4200ab8cc SHA256 e1ba3be5c3623bc2244c5876efbbb2f0ef488de2f0aa9929085bcbd3269af0fe
 MISC metadata.xml 155 RMD160 dfaa057e679b01302a807c75a32a910098b26809 SHA1 94024f83dcacbb53e92be090dd0f994ec93dc90d SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk9yMSQACgkQvFcC4BYPU0o5/wCfRUYhNpTeKs/B1V1Q6w9UYd3i
-2UsAnijNb/cefsmNBoFZIqMooxEZtgFJ
-=oO/r
+iEYEARECAAYFAk/u+rsACgkQvFcC4BYPU0qYxwCfU0tJ06gmzDNjOTHmIsHFBAV4
+l6YAnjgN71KJ7GEkR8DFJufOHIEKWZSP
+=u2NF
 -----END PGP SIGNATURE-----
