@@ -1,6 +1,11 @@
 # ChangeLog for dev-ml/bin-prot
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/bin-prot/ChangeLog,v 1.14 2012/03/27 21:29:02 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/bin-prot/ChangeLog,v 1.15 2012/06/30 13:10:13 aballier Exp $
+
+*bin-prot-108.00.01 (30 Jun 2012)
+
+  30 Jun 2012; Alexis Ballier <aballier@gentoo.org> +bin-prot-108.00.01.ebuild:
+  version bump
 
   27 Mar 2012; Alexis Ballier <aballier@gentoo.org> bin-prot-2.0.3.ebuild:
   convert to oasis.eclass
